--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,1 @@
-*.pb filter=lfs diff=lfs merge=lfs -text
-cds/static/cds_core/model/20180402-114759/model-20180402-114759.ckpt-275.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
-cds/static/cds_core/model/20180402-114759/model-20180402-114759.ckpt-275.index filter=lfs diff=lfs merge=lfs -text
-cds/static/cds_core/model/20180402-114759/model-20180402-114759.meta filter=lfs diff=lfs merge=lfs -text
-cds/static/cds_core/model/20180402-114759/20180402-114759.pb filter=lfs diff=lfs merge=lfs -text
+*.params filter=lfs diff=lfs merge=lfs -text
